--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,32 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-color: black;
+    background-color:black;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#card{
-    padding: auto;
-    background-color: rgb(16, 16, 4);
-    margin: auto ;
-    margin-top: 10%;
-    margin-bottom: 10%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+.card{
+   background-color: darkgrey;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   border-radius: 0.5rem;
+   width: 30%;
+   padding: 2rem;
 }
 
-.img{
-    margin: auto;
-    /* padding: 5px; */
-    height: 10%;
-    width: 20%;
+img{
+
+    width: 30%;
+    border-radius: 50%;
 }
 
 
@@ -35,9 +45,41 @@ body{
     text-align: center;
 }
 
-.profession{
+.about-me{
     margin: 10px;
     color: white;
     size: 8px;
     text-align: center;
+}
+
+.socials{
+    display: flex;
+    flex-direction: column;
+    /* text-align: center; */
+    width: 100%;
+    /* background-color: aqua;  */
+}
+
+.socials a{
+    text-decoration: none;
+    color: white;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 0.5rem 0 ;
+    text-align: center;
+    padding: 1rem;
+    border-radius: 0.5rem;
+
+    /* padding: auto; */
+}
+
+
+.socials a:hover,
+.socials a:focus,
+.socials a:active{
+    background: greenyellow;
+    color: rgb(39, 36, 36);
 }
